--- a/jxmapviewer2/examples/pom.xml
+++ b/jxmapviewer2/examples/pom.xml
@@ -41,6 +41,13 @@
 		<artifactId>httpclient</artifactId>
 		<version>4.5.6</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-databind</artifactId>
+		<version>2.9.7</version>
+	</dependency>
+	
 	<dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
